<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    tools:context=".Registro">

    <EditText
        android:id="@+id/txtContrasenaR"
        android:layout_width="249dp"
        android:layout_height="46dp"
        android:layout_marginTop="36dp"
        android:background="#70FAF1FB"
        android:ems="10"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:hint="@string/txtContrasenaR"
        android:inputType="textPassword"
        android:textColor="#1E2B73"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuarioR" />

    <EditText
        android:id="@+id/txtUsuarioR"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:layout_marginTop="80dp"
        android:background="#70FAF1FB"
        android:ems="10"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:hint="@string/txtUsuarioR"
        android:inputType="textPersonName"
        android:textColor="#1E2B73"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegistro" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="182dp"
        android:layout_height="51dp"
        android:layout_marginTop="52dp"
        android:background="#3F51B5"
        android:text="@string/btnRegistrarse"
        app:backgroundTint="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenaR" />

    <TextView
        android:id="@+id/txtRegistro"
        android:layout_width="288dp"
        android:layout_height="79dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center"
        android:text="@string/txtRegistro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>