<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginTop="36dp"
        android:text="@string/btnRegistrar"
        style="@style/boton2"
        app:layout_constraintBottom_toTopOf="@+id/btnAjustes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEntrar"/>

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="314dp"
        android:layout_height="79dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#253488"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginTop="60dp"
        android:background="#70FAF1FB"
        android:ems="10"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:hint="@string/txtUsuario"
        android:inputType="textPersonName"
        android:shadowColor="#00EC1E1E"
        android:textColor="#1E2B73"
        app:layout_constraintBottom_toTopOf="@+id/txtContrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="269dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:background="#70FAF1FB"
        android:ems="10"
        android:fontFamily="@font/coda"
        android:gravity="center"
        android:hint="@string/txtContrasena"
        android:inputType="textPassword"
        android:textColor="#1E2B73"
        app:layout_constraintBottom_toTopOf="@+id/btnEntrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <Button
        android:id="@+id/btnEntrar"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:background="#E91E63"
        android:text="@string/btnEntrar"
        android:textColorHighlight="#FFFFFF"
        style="@style/boton"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasena" />

    <Button
        android:id="@+id/btnAjustes"
        android:layout_width="55dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="#3F51B5"
        android:drawableLeft="@drawable/ajustes"
        app:backgroundTint="#BDC3E6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>